# artifacts/api-server/src/app.ts
@@ -34,7 +34,7 @@ app.use(cors({
   origin: true,
   credentials: true,
   methods: ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
-  allowedHeaders: ["Content-Type", "Authorization", "x-admin-token"],
+  allowedHeaders: ["Content-Type", "Authorization", "x-admin-token", "x-user-token"],
 }));
 
 app.use((req: Request, res: Response, next: NextFunction) => {
